[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://game/scripts/ui/BookLookupUI.gd" id="1"]

[node name="BookLookupUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 292.0
offset_bottom = 28.0
text = "Book Lookup"
horizontal_alignment = 1

[node name="TopicsContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 36.0
offset_right = 292.0
offset_bottom = 140.0

[node name="Topic1" type="Label" parent="Panel/TopicsContainer"]
text = "• Cloverhollow History"

[node name="Topic2" type="Label" parent="Panel/TopicsContainer"]
text = "• Nature & Wildlife"

[node name="Topic3" type="Label" parent="Panel/TopicsContainer"]
text = "• Legends & Lore"

[node name="Topic4" type="Label" parent="Panel/TopicsContainer"]
text = "• Magical Creatures"

[node name="StatusLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 150.0
offset_right = 292.0
offset_bottom = 170.0
text = "Cataloguing in progress..."
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 8.0
offset_top = 180.0
offset_right = 292.0
offset_bottom = 196.0
text = "Press Cancel to close"
horizontal_alignment = 1
